<resources>
    <string name="app_name">VidMate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Contact us:</string>
    <string name="nav_header_subtitle">xtappstudio@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_history">History</string>
    <string name="menu_about">About</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="enter_web">Type URL or search</string>
    <string name="prev">Back</string>
    <string name="next">Next</string>
    <string name="bookmark_this_page">Bookmark This</string>
    <string name="rename">Rename</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="queue">Queue</string>
    <string name="close">Close</string>
    <string name="reload">Reload</string>
    <string name="plus">+</string>
    <string name="xClose">X</string>
    <string name="home">Home</string>
    <string name="browser">Browser</string>
    <string name="downloads">Downloads</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="speed_0">Speed: 0KB/s</string>
    <string name="remaining_undefine">Remaining: —</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="downloads_inactive_instruction">Press the Go to Page Button. When the page is
        loaded, play the required video. Wait until app gets the new updated link</string>
    <string name="clear_all_finished">Clear All Finished</string>
    <string name="play_video">Play Video</string>
    <string name="go_to_page">Go to Page</string>
    <string name="rearrange_instructions">Click Move and drag the item to rearrange
        its position</string>
    <string name="move">Move</string>
    <string name="go_to_folder">Go to Folder</string>
    <string name="never_show_download_notice">Never show again</string>
    <string name="add_bookmark_title_label">Title:</string>
    <string name="add_bookmark_url_label">URL:</string>
    <string name="add_bookmark_dest_folder_label">Destination Folder:</string>
    <string name="add_bookmark_new_folder">New Folder</string>
    <string name="add_bookmark_save">Save</string>
    <string name="bookmarks_root_folder">bookmarks</string>
    <string name="bookmarks_new_folder">+ New Folder</string>
    <string name="search">Search</string>
    <string name="clear_history">Clear History</string>
    <string name="ad_blocker">Ad Blocker</string>
    <string name="app_title">LM videodownloader</string>
    <string name="about">LM videodownloader is a browser app for downloading videos
        \n\nCopyright ©2018 Loremar Marabillas\n\nThis program is free software and licensed
        under the GNU General Public License v2.0 </string>
    <string name="try_these_sites">Try these sites</string>
</resources>
